--- a/index2.html
+++ b/index2.html
@@ -303,7 +303,7 @@
                     <!--Grid Column-->
                     <div class="col-md-8">
                         <!--Description-->
-                        <p>De Atlas Model Schools is one of the best schools that we parents can
+                        <p>De-Atlas Model Schools is one of the best schools that we parents can
                             guarantee any wise parent because they have qualified diligent and
                             dependable teachers and their students are very sound with well
                             secured and decent environment for effective learning. I have been
