--- a/index2.html
+++ b/index2.html
@@ -185,11 +185,12 @@
                             can have to ensure quality delivery of knowledge to our wards. we also have programs to
                             ensure our students are trained up to international standards so as to stand out among their
                             peers no matter where they find themselves.</p>
-                            <div class="row">
-                                <div class="col-12"><button class="btn btn-primary float-right button-radius">Register Now</button></div>
-                                
-                            </div>
-                        
+                        <div class="row">
+                            <div class="col-12"><button class="btn btn-primary float-right button-radius">Register
+                                    Now</button></div>
+
+                        </div>
+
                     </div>
                     <!--Grid column-->
                 </div>
@@ -303,7 +304,7 @@
                     <!--Grid Column-->
                     <div class="col-md-8">
                         <!--Description-->
-                        <p>De-Atlas Model Schools is one of the best schools that we parents can
+                        <p>De Atlas Model Schools is one of the best schools that we parents can
                             guarantee any wise parent because they have qualified diligent and
                             dependable teachers and their students are very sound with well
                             secured and decent environment for effective learning. I have been
@@ -324,79 +325,72 @@
 
     <!--Footer-->
     <!-- Footer -->
-    <footer class="page-footer unique-color-dark">
+    <footer class="page-footer unique-color-dark pt-4">
         <!--Footer Links-->
         <div class="container mt-5 mb-4 text-center text-md-left">
             <div class="row mt-3">
 
                 <!--First column-->
-                <div class="col-md-3 col-lg-4 col-xl-3 mb-4">
-                    <h6 class="text-uppercase font-weight-bold">
-                        <strong>Company name</strong>
-                    </h6>
+                <div class="col-md-6 col-lg-4 col-xl-4 mb-4">
+                    <div class="row">
+                        <div class="col-6"><img src="./img/ridbay-logo.jpg" alt="" class="img-fluid"></div>
+                        <div class="col-6 pt-5">
+                            <h6 class="text-uppercase font-weight-bold">
+                                <strong>DE ATLAS MODEL SCHOOLS</strong>
+                            </h6>
+                        </div>
+                    </div>
+
                     <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-                    <p>Here you can use rows and columns here to organize your footer content. Lorem ipsum dolor sit
-                        amet, consectetur adipisicing elit.</p>
+                    <p>De Atlas Model School offers
+                        first-class education from the
+                        foundation stage to
+                        secondary levels. </p>
                 </div>
                 <!--/.First column-->
 
                 <!--Second column-->
-                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                <div class="col-md-3 col-lg-4 col-xl-4">
                     <h6 class="text-uppercase font-weight-bold">
-                        <strong>Products</strong>
+                        <strong>Contact us</strong>
                     </h6>
                     <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                     <p>
-                        <a href="#!">Product1</a>
-                    </p>
+                        <i class="fas fa-home  mr-3"></i> De Atlas Model Schools,
+                        Ago Yusuf Community,
+                        Off Zuve - Ilogbo
+                        Eremi Road,
+                        Lagos. </p>
                     <p>
-                        <a href="#!">Product2</a>
-                    </p>
+                        <i class="fas fa-envelope mr-3"></i> admissions@deatlasmodelschool.com</p>
                     <p>
-                        <a href="#!">Product3</a>
-                    </p>
-                    <p>
-                        <a href="#!">Product4r</a>
-                    </p>
+                        <i class="fas fa-phone mr-3"></i>+234 803 816 0773</p>
                 </div>
                 <!--/.Second column-->
 
                 <!--Third column-->
-                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                <div class="col-md-3 col-lg-4 col-xl-4 mx-auto mb-4">
                     <h6 class="text-uppercase font-weight-bold">
                         <strong>Useful links</strong>
                     </h6>
                     <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                     <p>
-                        <a href="#!">Your Account</a>
+                        <a href="#!">HOME</a>
                     </p>
                     <p>
-                        <a href="#!">Become an Affiliate</a>
+                        <a href="#!">ABOUT</a>
                     </p>
                     <p>
-                        <a href="#!">Shipping Rates</a>
+                        <a href="#!">ADMISSIONS</a>
                     </p>
                     <p>
-                        <a href="#!">Help</a>
+                        <a href="#!">GALLERY</a>
                     </p>
                 </div>
                 <!--/.Third column-->
 
                 <!--Fourth column-->
-                <div class="col-md-4 col-lg-3 col-xl-3">
-                    <h6 class="text-uppercase font-weight-bold">
-                        <strong>Contact</strong>
-                    </h6>
-                    <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-                    <p>
-                        <i class="fas fa-home  mr-3"></i> Ikeja, Lagos, Nigeria</p>
-                    <p>
-                        <i class="fas fa-envelope mr-3"></i> info@example.com</p>
-                    <p>
-                        <i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-                    <p>
-                        <i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
-                </div>
+
                 <!--/.Fourth column-->
 
             </div>
@@ -405,7 +399,9 @@
 
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">© 2020 Copyright:
-            <a href="https://balogunridwan.com"> Ridbay</a>
+            <a href="https://balogunridwan.com"> De Atlas Model School</a>
+        </div>
+        <div class="footer-copyright text-center py-3">All rights reserved
         </div>
         <!-- Copyright -->
 
