--- a/index2.html
+++ b/index2.html
@@ -26,20 +26,23 @@
     <header>
         <div class="container-fluid primary-color pb-5">
             <div class="row">
-                <div class="col-md-4">
-                    <div>+2348078197526</div>
+                <div class="col-md-2">
+                    <div>+234 803 816 0773</div>
                 </div>
-                <div class="col-md-4">balogunridwan@gmail.com</div>
-                <div class="col-md-4">Ikeja, Lagos</div>
+                <div class="col-md-4">admissions@deatlasmodelschool.com</div>
+                <div class="col-md-6">Ago Yusuf Community, Off Zuve - Ilogbo Eremi Road, Lagos.</div>
             </div>
         </div>
         <!--Navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark primary-color">
+        <nav class="navbar navbar-expand-lg navbar-dark scrolling-navbar pink">
 
             <div class="container">
 
                 <!-- Navbar brand -->
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="#">
+                    <img src="./img/ridbay-logo.jpg" height="30" class="d-inline-block align-top"
+                      alt="mdb logo">
+                  </a>
 
                 <!-- Collapse button -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
@@ -51,38 +54,25 @@
                 <div class="collapse navbar-collapse" id="basicExampleNav">
 
                     <!-- Links -->
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Home
-                                <span class="sr-only">(current)</span>
-                            </a>
+                    <ul class="navbar-nav my-2 my-lg-0 ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#intro">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Features</a>
+                            <a class="nav-link" href="#best-features">Features</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
+                            <a class="nav-link" href="#examples">Examples</a>
                         </li>
-
-                        <!-- Dropdown -->
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                            <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                            </div>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#gallery">Gallery</a>
                         </li>
-
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contact">Contact</a>
+                        </li>
                     </ul>
                     <!-- Links -->
 
-                    <form class="form-inline">
-                        <div class="md-form my-0">
-                            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                        </div>
-                    </form>
                 </div>
                 <!-- Collapsible content -->
 
