--- a/index2.html
+++ b/index2.html
@@ -56,19 +56,19 @@
                     <!-- Links -->
                     <ul class="navbar-nav my-2 my-lg-0 ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#intro">Home</a>
+                            <a class="nav-link" href="#intro">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#best-features">Features</a>
+                            <a class="nav-link" href="#best-features">ABOUT US</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#examples">Examples</a>
+                            <a class="nav-link" href="#examples">ADMISSIONS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#gallery">Gallery</a>
+                            <a class="nav-link" href="#gallery">GALLERY</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#contact">Contact</a>
+                            <a class="nav-link" href="#contact">CONTACT US</a>
                         </li>
                     </ul>
                     <!-- Links -->
@@ -125,7 +125,7 @@
 
                 <!-- Heading -->
                 <h2 class="mb-5 mt-10 font-weight-bold text-center white-text">About Us</h2>
-                <h2 class="mb-5 mt-10 font-weight-bold text-center blue-text">About Us</h2>
+                <h2 class="mb-5 mt-10 font-weight-bold text-center about-us-color">About Us</h2>
 
                 <!--Grid row-->
                 <div class="row">
@@ -167,8 +167,8 @@
                     </div>
                     <!--Grid column-->
                     <!--Grid column-->
-                    <div class="col-md-6 mb-4">
-                        <h4 class="mb-3 text-uppercase"><strong>Our Students</strong></h4>
+                    <div class="col-md-6 mb-5 mt-5 pt-4">
+                        <h4 class="mb-3 text-uppercase text-info"><strong>Our Students</strong></h4>
                         <p>Our students are trained with the aim of developing a high level of self-esteem and
                             self-confidence wherever they might find themselves in the future.They are engaged and taugh
                             using accredited nigeria curicullum for primary schools and taught by experienced staff you
@@ -259,7 +259,7 @@
             </section>
             <!--Section: Best Features-->
         </div>
-        <div class="container-fluid pink">
+        <div class="container-fluid pink pt-5 pb-5">
             <section id="why" class='text-center pb-5'>
                 <h2 class="mb-3 pt-5 pb-5 font-weight-bold text-center white-text">WHY DE ATLAS MODEL SCHOOL</h2>
                 <div class="row ml-5 mr-5">
@@ -288,7 +288,7 @@
             <!--Section: Best Features-->
             <section id="best-features" class='text-center mt-5 mb-5 pb-5 pt-5'>
                 <!--Heading-->
-                <h2 class="md-5">TESTIMONIALS</h2>
+                <h2 class="md-5 font-weight-bold text-center text-uppercase text-info pb-5">TESTIMONIALS</h2>
                 <!--Grid row-->
                 <div class="row d-flex justify-content-center mb-4">
                     <!--Grid Column-->
@@ -300,7 +300,7 @@
                             secured and decent environment for effective learning. I have been
                             enjoying the school.
                         </p>
-                        <h4>Mrs. Kareem (Parent)</h4>
+                        <h4 class="font-weight-bold text-info">Mrs. Kareem (Parent)</h4>
                     </div>
                 </div>
                 <!--Grid row-->
@@ -315,7 +315,7 @@
 
     <!--Footer-->
     <!-- Footer -->
-    <footer class="page-footer unique-color-dark pt-4">
+    <footer class="page-footer footer-color pt-4">
         <!--Footer Links-->
         <div class="container mt-5 mb-4 text-center text-md-left">
             <div class="row mt-3">
