--- a/index2.html
+++ b/index2.html
@@ -23,26 +23,23 @@
 <body>
 
     <!--Main Navigation-->
-    <header>
-        <div class="container-fluid primary-color pb-5">
-            <div class="row">
-                <div class="col-md-2">
-                    <div>+234 803 816 0773</div>
-                </div>
-                <div class="col-md-4">admissions@deatlasmodelschool.com</div>
-                <div class="col-md-6">Ago Yusuf Community, Off Zuve - Ilogbo Eremi Road, Lagos.</div>
+    <div class="container-fluid primary-color pb-5">
+        <div class="row">
+            <div class="col-md-2">
+                <div>+234 803 816 0773</div>
             </div>
+            <div class="col-md-4">admissions@deatlasmodelschool.com</div>
+            <div class="col-md-6">Ago Yusuf Community, Off Zuve - Ilogbo Eremi Road, Lagos.</div>
         </div>
-        <!--Navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark scrolling-navbar pink">
-
+    </div>
+    <section class="cover text-center">
+        <nav class="navbar  navbar-dark navbar-expand-lg navbar-toggleable-md navbar-trans navbar-inverse">
             <div class="container">
 
                 <!-- Navbar brand -->
                 <a class="navbar-brand" href="#">
-                    <img src="./img/ridbay-logo.jpg" height="30" class="d-inline-block align-top"
-                      alt="mdb logo">
-                  </a>
+                    <img src="./img/ridbay-logo.jpg" height="30" class="d-inline-block align-top" alt="mdb logo">
+                </a>
 
                 <!-- Collapse button -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
@@ -77,43 +74,19 @@
                 <!-- Collapsible content -->
 
             </div>
-
         </nav>
-        <!--/.Navbar-->
-        <!--Mask-->
-        <div id="intro" class="view">
-
-            <div class="mask rgba-black-strong">
-
-                <div class="container-fluid d-flex align-items-center justify-content-center h-100">
-
-                    <div class="row d-flex justify-content-center text-center">
-
-                        <div class="col-md-10">
-
-                            <!-- Heading -->
-                            <h2 class="display-4 font-weight-normal white-text pt-5 mb-2">WELCOME TO DE ATLAS MODEL
-                                SCHOOLS </h2>
-
-                            <!-- Divider -->
-                            <!-- <hr class="hr-light"> -->
-
-                            <!-- Description -->
-                            <h4 class="white-text my-4">THE PLACE OF ACADEMIC EXCELLENCE</h4>
-                            <button type="button" class="btn pink white-text button-radius">Learn more</button>
-                            <button type="button" class="btn white pink-text button-radius">Admission</button>
-
-                        </div>
-
-                    </div>
-
-                </div>
+        <div class="cover-container pb-5 ">
+            <div class="cover-inner container pt-5">
+                <h1 class="jumbotron-heading mt-5 pt-5"><strong>WELCOME TO DE ATLAS MODEL SCHOOLS </strong></h1>
+                <p class="lead">THE PLACE OF ACADEMIC EXCELLENCE</p>
+                
+                <button type="button" class="btn pink white-text button-radius">Learn more</button>
+                <button type="button" class="btn white pink-text button-radius">Admission</button>
 
             </div>
-
         </div>
-        <!--/.Mask-->
-    </header>
+    </section>
+
     <!--Main Navigation-->
 
     <!--Main layout-->
@@ -124,7 +97,6 @@
             <section id="gallery text-center">
 
                 <!-- Heading -->
-                <h2 class="mb-5 mt-10 font-weight-bold text-center white-text">About Us</h2>
                 <h2 class="mb-5 mt-10 font-weight-bold text-center about-us-color">About Us</h2>
 
                 <!--Grid row-->
@@ -146,7 +118,7 @@
                     <!--Grid column-->
                     <div class="col-md-6 mb-4">
                         <div class="view overlay z-depth-1-half">
-                            <img src="./img/48.jpg" class="img-fluid">
+                            <img src="./img/De Atlas Images/1.jpg" class="img-fluid">
                             <a href="#!">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
@@ -159,7 +131,7 @@
                     <!--Grid column-->
                     <div class="col-md-6 mb-4">
                         <div class="view overlay z-depth-1-half">
-                            <img src="./img/48.jpg" class="img-fluid">
+                            <img src="./img/De Atlas Images/9.jpg" class="img-fluid">
                             <a href="#!">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
@@ -201,7 +173,7 @@
                             <h4 class="text-center white-text py-2 my-0">CRECHE</h4>
                         </div>
                         <div class="view overlay z-depth-1-half">
-                            <img src="./img/48.jpg" class="img-fluid">
+                            <img src="./img/De Atlas Images/4.jpg" class="img-fluid">
                             <a href="#!">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
@@ -215,7 +187,7 @@
                             <h4 class="text-center white-text py-2 my-0">NURSERY</h4>
                         </div>
                         <div class="view overlay z-depth-1-half">
-                            <img src="./img/48.jpg" class="img-fluid">
+                            <img src="./img/De Atlas Images/3.jpg" class="img-fluid">
                             <a href="#!">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
@@ -229,7 +201,7 @@
                             <h4 class="text-center white-text py-2 my-0">PRIMARY</h4>
                         </div>
                         <div class="view overlay z-depth-1-half">
-                            <img src="./img/48.jpg" class="img-fluid">
+                            <img src="./img/De Atlas Images/8.jpg" class="img-fluid">
                             <a href="#!">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
@@ -244,7 +216,7 @@
                             <h4 class="text-center white-text py-2 my-0">SECONDARY</h4>
                         </div>
                         <div class="view overlay z-depth-1-half">
-                            <img src="./img/48.jpg" class="img-fluid">
+                            <img src="./img/De Atlas Images/7.jpg" class="img-fluid">
                             <a href="#!">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
