--- a/index2.html
+++ b/index2.html
@@ -23,13 +23,13 @@
 <body>
 
     <!--Main Navigation-->
-    <div class="container-fluid primary-color pb-5">
+    <div class="container-fluid footer-color pb-2 pt-2 mx-auto text-center text-md-left white-text">
         <div class="row">
             <div class="col-md-2">
-                <div>+234 803 816 0773</div>
+                <div><i class="fas fa-phone mr-3"></i>+234 803 816 0773</div>
             </div>
-            <div class="col-md-4">admissions@deatlasmodelschool.com</div>
-            <div class="col-md-6">Ago Yusuf Community, Off Zuve - Ilogbo Eremi Road, Lagos.</div>
+            <div class="col-md-4"><i class="fas fa-envelope mr-3"></i>admissions@deatlasmodelschool.com</div>
+            <div class="col-md-6"><i class="fas fa-home  mr-3"></i>Ago Yusuf Community, Off Zuve - Ilogbo Eremi Road, Lagos.</div>
         </div>
     </div>
     <section class="cover text-center">
@@ -38,7 +38,7 @@
 
                 <!-- Navbar brand -->
                 <a class="navbar-brand" href="#">
-                    <img src="./img/ridbay-logo.jpg" height="30" class="d-inline-block align-top" alt="mdb logo">
+                    <img src="./img/De Atlas Images/DE ATLAS WEBSITE LOGO.png" height="70" class="d-inline-block align-top" alt="mdb logo">
                 </a>
 
                 <!-- Collapse button -->
@@ -295,15 +295,15 @@
                 <!--First column-->
                 <div class="col-md-6 col-lg-4 col-xl-4 mb-4">
                     <div class="row">
-                        <div class="col-6"><img src="./img/ridbay-logo.jpg" alt="" class="img-fluid"></div>
+                        <div class="col-6"><img src="./img/De Atlas Images/DE ATLAS WEBSITE LOGO.png" alt="" class="img-fluid"></div>
                         <div class="col-6 pt-5">
-                            <h6 class="text-uppercase font-weight-bold">
+                            <!-- <h6 class="text-uppercase font-weight-bold">
                                 <strong>DE ATLAS MODEL SCHOOLS</strong>
-                            </h6>
+                            </h6> -->
                         </div>
                     </div>
 
-                    <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                    <!-- <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;"> -->
                     <p>De Atlas Model School offers
                         first-class education from the
                         foundation stage to
