--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Balogun Ridwan Landing Page Bootstrap</title>
+    <title>De Atlas Model Schools Website</title>
     <!-- MDB icon -->
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <!-- Font Awesome -->
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Material Design Bootstrap -->
     <link rel="stylesheet" href="css/mdb.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <!-- Your custom styles (optional) -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -24,7 +25,7 @@
 
     <!--Main Navigation-->
     <div class="container-fluid footer-color pb-2 pt-2 mx-auto text-center text-md-left white-text">
-        <div class="row">
+        <div class="row ml-5">
             <div class="col-md-2">
                 <div><i class="fas fa-phone mr-3"></i>+234 803 816 0773</div>
             </div>
@@ -38,7 +39,7 @@
 
                 <!-- Navbar brand -->
                 <a class="navbar-brand" href="#">
-                    <img src="./img/De Atlas Images/DE ATLAS WEBSITE LOGO.png" height="70" class="d-inline-block align-top" alt="mdb logo">
+                    <img src="./img/De Atlas Images/School Logo.png" height="70" class="d-inline-block align-top" alt="mdb logo">
                 </a>
 
                 <!-- Collapse button -->
@@ -77,7 +78,7 @@
         </nav>
         <div class="cover-container pb-5 ">
             <div class="cover-inner container pt-5">
-                <h1 class="jumbotron-heading mt-5 pt-5"><strong>WELCOME TO DE ATLAS MODEL SCHOOLS </strong></h1>
+                <h1 class="jumbotron-heading mt-5 pt-5 font-weight-bold"><strong>WELCOME TO DE ATLAS MODEL SCHOOLS </strong></h1>
                 <p class="lead">THE PLACE OF ACADEMIC EXCELLENCE</p>
                 
                 <button type="button" class="btn pink white-text button-radius">Learn more</button>
@@ -304,7 +305,7 @@
                     </div>
 
                     <!-- <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;"> -->
-                    <p>De Atlas Model School offers
+                    <p class="text-justify">De Atlas Model School offers
                         first-class education from the
                         foundation stage to
                         secondary levels. </p>
