--- a/about.html
+++ b/about.html
@@ -30,62 +30,68 @@
                 <div><i class="fas fa-phone mr-3"></i>+234 803 816 0773</div>
             </div>
             <div class="col-md-4"><i class="fas fa-envelope mr-3"></i>admissions@deatlasmodelschool.com</div>
-            <div class="col-md-6"><i class="fas fa-home  mr-3"></i>Ago Yusuf Community, Off Zuve - Ilogbo Eremi Road, Lagos.</div>
+            <div class="col-md-6"><i class="fas fa-home  mr-3"></i>Ago Yusuf Community, Off Zuve - Ilogbo Eremi Road,
+                Lagos.</div>
         </div>
     </div>
-    <section class="cover text-center">
-        <nav class="navbar  navbar-dark navbar-expand-lg navbar-toggleable-md navbar-trans navbar-inverse">
-            <div class="container">
+    <nav class="navbar navbar-dark navbar-expand-lg primary-color">
+        <div class="container">
 
-                <!-- Navbar brand -->
-                <a class="navbar-brand" href="#">
-                    <img src="./img/De Atlas Images/School Logo.png" height="70" class="d-inline-block align-top" alt="mdb logo">
-                </a>
+            <!-- Navbar brand -->
+            <a class="navbar-brand" href="#">
+                <img src="./img/De Atlas Images/School Logo.png" height="70" class="d-inline-block align-top"
+                    alt="mdb logo">
+            </a>
 
-                <!-- Collapse button -->
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
-                    aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+            <!-- Collapse button -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
+                aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-                <!-- Collapsible content -->
-                <div class="collapse navbar-collapse" id="basicExampleNav">
+            <!-- Collapsible content -->
+            <div class="collapse navbar-collapse" id="basicExampleNav">
 
-                    <!-- Links -->
-                    <ul class="navbar-nav my-2 my-lg-0 ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#intro">HOME</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="about.html">ABOUT US</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#examples">ADMISSIONS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#gallery">GALLERY</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#contact">CONTACT US</a>
-                        </li>
-                    </ul>
-                    <!-- Links -->
+                <!-- Links -->
+                <ul class="navbar-nav my-2 my-lg-0 ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#intro">HOME</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#best-features">ABOUT US</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#examples">ADMISSIONS</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#gallery">GALLERY</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">CONTACT US</a>
+                    </li>
+                </ul>
+                <!-- Links -->
+
+            </div>
+            <!-- Collapsible content -->
+
+        </div>
+    </nav>
+    <section>
+        <!-- Card -->
+        <div class="card card-image cover-other-pages pt-0">
+
+            <!-- Content -->
+            <div class="text-white text-left d-flex align-items-center rgba-black-strong py-5 px-4">
+                <div>
+
+                    <h2 class="card-title pt-2 my-5 py-5 font-weight-bold">ABOUT US</h2>
 
                 </div>
-                <!-- Collapsible content -->
-
             </div>
-        </nav>
-        <div class="cover-container pb-5 ">
-            <div class="cover-inner container pt-5">
-                <h1 class="jumbotron-heading mt-5 pt-5 font-weight-bold"><strong>WELCOME TO DE ATLAS MODEL SCHOOLS </strong></h1>
-                <p class="lead">THE PLACE OF ACADEMIC EXCELLENCE</p>
-                
-                <button type="button" class="btn pink white-text button-radius">Learn more</button>
-                <button type="button" class="btn white pink-text button-radius">Admission</button>
-
-            </div>
+            <!-- Content -->
         </div>
+        <!-- Card -->
     </section>
 
     <!--Main Navigation-->
@@ -98,33 +104,37 @@
             <section id="gallery text-center">
 
                 <!-- Heading -->
-                <h2 class="mb-5 mt-10 font-weight-bold text-center about-us-color">About Us</h2>
+                <!-- <h2 class="mb-5 mt-10 font-weight-bold text-center about-us-color">About Us</h2> -->
 
                 <!--Grid row-->
                 <div class="row">
                     <!--Grid column-->
-                    <div class="col-md-6 mb-4">
-                        <h4 class="mb-3 text-uppercase text-info"><strong>Who we are</strong></h4>
-                        <p>We are goal-oriented and strive for continuous improvement in teaching and learning. We value
-                            not only academic success, but we also encourage talents of all kinds whether in the arts,
-                            drama, music or sports. Our view is that a kind, respectful and helpful pupil, who has a
-                            positive attitude to school life and fellow pupils, is every bit as worthwhile as the
-                            brilliant scholar, artist or athlete. All learning sessions are delivered by a team of
-                            highly motivated teachers with a rich background in providing teaching and learning services
-                            to pupils and who believe in learning being solely about the pupils. Our team of teachers
-                            are also constantly exposed to professional development programs to maintain the quality of
-                            teaching and learning sessions being provided. </p>
+                    <div class="col-md-12 mb-4">
+                        <h2 class="mb-3 text-uppercase font-weight-bold about-us-title-color">ABOUT DE ATLAS SCHOOLS</h2>
+                        <p class="text-justify about-us-color">Atlas Model School was established on 17th September, 2017, with the main mission to build
+                            every child's core values and nurture their dreams through sound basic and secondary
+                            foundation in academics as well as other extracurricular activities, without one taking over
+                            the other. This school was born to strike a balance between the grounds of academics,
+                            character building and capacity building, which are the founding blocks of every child's
+                            career path. At De Atlas Model School, we foster our values through a well thought process
+                            of inter and intra personal relationships, creativity, the virtues of self-discipline,
+                            tolerance, love, fairness, judgement, self-reliance, integrity and self discipline in our
+                            students right from the start. While we do not have a system of rigid rules, our overall
+                            Code of Conduct is based on the need to ensure the security of the students as well as
+                            consideration for others and high standards of behaviour. Our school has no formal links to
+                            any religious denomination, though the school has always acknowledged its Christian
+                            tradition.F</p>
                     </div>
                     <!--Grid column-->
                     <!--Grid column-->
-                    <div class="col-md-6 mb-4">
+                    <!-- <div class="col-md-6 mb-4">
                         <div class="view overlay z-depth-1-half">
                             <img src="./img/De Atlas Images/1.jpg" class="img-fluid">
                             <a href="#!">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
                         </div>
-                    </div>
+                    </div> -->
                     <!--Grid column-->
 
                 </div>
@@ -296,7 +306,8 @@
                 <!--First column-->
                 <div class="col-md-6 col-lg-4 col-xl-4 mb-4">
                     <div class="row">
-                        <div class="col-6"><img src="./img/De Atlas Images/DE ATLAS WEBSITE LOGO.png" alt="" class="img-fluid"></div>
+                        <div class="col-6"><img src="./img/De Atlas Images/DE ATLAS WEBSITE LOGO.png" alt=""
+                                class="img-fluid"></div>
                         <div class="col-6 pt-5">
                             <!-- <h6 class="text-uppercase font-weight-bold">
                                 <strong>DE ATLAS MODEL SCHOOLS</strong>
