School About Page

--- a/about.html
+++ b/about.html
@@ -34,14 +34,21 @@
                 Lagos.</div>
         </div>
     </div>
-    <nav class="navbar navbar-dark navbar-expand-lg primary-color">
+    <nav class="navbar navbar-dark navbar-expand-lg">
         <div class="container">
 
             <!-- Navbar brand -->
-            <a class="navbar-brand" href="#">
-                <img src="./img/De Atlas Images/School Logo.png" height="70" class="d-inline-block align-top"
-                    alt="mdb logo">
-            </a>
+            <div class="row">
+                <div class="col-md-6"><a class="navbar-brand" href="#">
+                        <img src="./img/De Atlas Images/School Logo.png" height="70" class="d-inline-block align-top"
+                            alt="mdb logo">
+
+                    </a>
+                </div>
+                <div class="col-md-6">
+                    <p class="info-text text-uppercase">De Atlas Model School</p>
+                </div>
+            </div>
 
             <!-- Collapse button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
@@ -53,21 +60,21 @@
             <div class="collapse navbar-collapse" id="basicExampleNav">
 
                 <!-- Links -->
-                <ul class="navbar-nav my-2 my-lg-0 ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#intro">HOME</a>
+                <ul class="navbar-nav my-2 my-lg-0 ml-auto ">
+                    <li class="nav-item ">
+                        <a class="nav-link blue-text" href="#intro">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#best-features">ABOUT US</a>
+                        <a class="nav-link blue-text" href="#best-features">ABOUT US</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#examples">ADMISSIONS</a>
+                        <a class="nav-link blue-text" href="#examples">ADMISSIONS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#gallery">GALLERY</a>
+                        <a class="nav-link blue-text" href="#gallery">GALLERY</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">CONTACT US</a>
+                        <a class="nav-link blue-text" href="#contact">CONTACT US</a>
                     </li>
                 </ul>
                 <!-- Links -->
@@ -103,15 +110,15 @@
             <!--Section: Gallery-->
             <section id="gallery text-center">
 
-                <!-- Heading -->
-                <!-- <h2 class="mb-5 mt-10 font-weight-bold text-center about-us-color">About Us</h2> -->
 
                 <!--Grid row-->
                 <div class="row">
                     <!--Grid column-->
                     <div class="col-md-12 mb-4">
-                        <h2 class="mb-3 text-uppercase font-weight-bold about-us-title-color">ABOUT DE ATLAS SCHOOLS</h2>
-                        <p class="text-justify about-us-color">Atlas Model School was established on 17th September, 2017, with the main mission to build
+                        <h2 class="mb-3 text-uppercase font-weight-bold about-us-title-color">ABOUT DE ATLAS SCHOOLS
+                        </h2>
+                        <p class="text-justify about-us-color">Atlas Model School was established on 17th September,
+                            2017, with the main mission to build
                             every child's core values and nurture their dreams through sound basic and secondary
                             foundation in academics as well as other extracurricular activities, without one taking over
                             the other. This school was born to strike a balance between the grounds of academics,
@@ -123,173 +130,88 @@
                             Code of Conduct is based on the need to ensure the security of the students as well as
                             consideration for others and high standards of behaviour. Our school has no formal links to
                             any religious denomination, though the school has always acknowledged its Christian
-                            tradition.F</p>
+                            tradition.</p>
                     </div>
-                    <!--Grid column-->
-                    <!--Grid column-->
-                    <!-- <div class="col-md-6 mb-4">
-                        <div class="view overlay z-depth-1-half">
-                            <img src="./img/De Atlas Images/1.jpg" class="img-fluid">
-                            <a href="#!">
-                                <div class="mask rgba-white-slight"></div>
-                            </a>
-                        </div>
-                    </div> -->
-                    <!--Grid column-->
+
 
                 </div>
                 <div class="row">
                     <!--Grid column-->
-                    <div class="col-md-6 mb-4">
-                        <div class="view overlay z-depth-1-half">
-                            <img src="./img/De Atlas Images/9.jpg" class="img-fluid">
-                            <a href="#!">
-                                <div class="mask rgba-white-slight"></div>
-                            </a>
-                        </div>
+                    <div class="col-md-12 mb-4">
+                        <h2 class="mb-3 text-uppercase font-weight-bold about-us-title-color">VISION</h2>
+                        <p class="text-justify about-us-color">Being a citadel of learning beyond the present, in an
+                            open and welcoming atmosphere that builds children towards being global citizens. </p>
                     </div>
-                    <!--Grid column-->
-                    <!--Grid column-->
-                    <div class="col-md-6 mb-5 mt-5 pt-4">
-                        <h4 class="mb-3 text-uppercase text-info"><strong>Our Students</strong></h4>
-                        <p>Our students are trained with the aim of developing a high level of self-esteem and
-                            self-confidence wherever they might find themselves in the future.They are engaged and taugh
-                            using accredited nigeria curicullum for primary schools and taught by experienced staff you
-                            can have to ensure quality delivery of knowledge to our wards. we also have programs to
-                            ensure our students are trained up to international standards so as to stand out among their
-                            peers no matter where they find themselves.</p>
-                        <div class="row">
-                            <div class="col-12"><button class="btn btn-primary float-right button-radius">Register
-                                    Now</button></div>
 
-                        </div>
 
-                    </div>
-                    <!--Grid column-->
                 </div>
-                <!--Grid row-->
-
-            </section>
-            <!--Section: Gallery-->
-            <!--Section: Best Features-->
-            <section id="best-features" class="mb-5">
-                <p class=" text-center text-info text-uppercase">Our School</p>
-                <h1 class="mb-3 font-weight-bold text-center text-uppercase pink-text">Programs</h1>
-                <!--Grid row-->
                 <div class="row">
-
                     <!--Grid column-->
-                    <div class="col-lg-3 col-md-3 mb-4">
-                        <div class="container-fluid primary-color">
-                            <h4 class="text-center white-text py-2 my-0">CRECHE</h4>
-                        </div>
-                        <div class="view overlay z-depth-1-half">
-                            <img src="./img/De Atlas Images/4.jpg" class="img-fluid">
-                            <a href="#!">
-                                <div class="mask rgba-white-slight"></div>
-                            </a>
-                        </div>
-
+                    <div class="col-md-12 mb-4">
+                        <h2 class="mb-3 text-uppercase font-weight-bold about-us-title-color">MISSION</h2>
+                        <p class="text-justify about-us-color">Provision of Wholistic, inclusive, Qualitative Education
+                            for every child. </p>
                     </div>
-                    <!--Grid column-->
-                    <!--Grid column-->
-                    <div class="col-lg-3 col-md-3 mb-4">
-                        <div class="container-fluid primary-color">
-                            <h4 class="text-center white-text py-2 my-0">NURSERY</h4>
-                        </div>
-                        <div class="view overlay z-depth-1-half">
-                            <img src="./img/De Atlas Images/3.jpg" class="img-fluid">
-                            <a href="#!">
-                                <div class="mask rgba-white-slight"></div>
-                            </a>
-                        </div>
 
-                    </div>
-                    <!--Grid column-->
-                    <!--Grid column-->
-                    <div class="col-lg-3 col-md-3 mb-4">
-                        <div class="container-fluid primary-color">
-                            <h4 class="text-center white-text py-2 my-0">PRIMARY</h4>
-                        </div>
-                        <div class="view overlay z-depth-1-half">
-                            <img src="./img/De Atlas Images/8.jpg" class="img-fluid">
-                            <a href="#!">
-                                <div class="mask rgba-white-slight"></div>
-                            </a>
-                        </div>
-
-                    </div>
-                    <!--Grid column-->
-
-                    <!--Grid column-->
-                    <div class="col-lg-3 col-md-3 mb-4">
-                        <div class="container-fluid primary-color">
-                            <h4 class="text-center white-text py-2 my-0">SECONDARY</h4>
-                        </div>
-                        <div class="view overlay z-depth-1-half">
-                            <img src="./img/De Atlas Images/7.jpg" class="img-fluid">
-                            <a href="#!">
-                                <div class="mask rgba-white-slight"></div>
-                            </a>
-                        </div>
-
-                    </div>
-                    <!--Grid column-->
 
                 </div>
-                <!--Grid row-->
+                <div class="row">
+                    <!--Grid column-->
+                    <div class="col-md-12 mb-4">
+                        <h2 class="mb-3 text-uppercase font-weight-bold about-us-title-color">OUR STAND</h2>
+                        <p class="text-justify about-us-color">The school is inclusive for all and sundry. It is an
+                            entity that embraces all without bias for tribe or religion, neither is there creation of
+                            social strata amongst students. </p>
+                    </div>
 
-            </section>
-            <!--Section: Best Features-->
-        </div>
-        <div class="container-fluid pink pt-5 pb-5">
-            <section id="why" class='text-center pb-5'>
-                <h2 class="mb-3 pt-5 pb-5 font-weight-bold text-center white-text">WHY DE ATLAS MODEL SCHOOL</h2>
-                <div class="row ml-5 mr-5">
-                    <div class="col-lg-4 col-md-4 mb-4">
-                        <div class="container">
-                            <h2 class="text-center white-text py-2 my-0 font-weight-bold h1">40</h2>
-                            <h4 class="text-center white-text py-2 my-0">CERTIFIED TEACHERS</h4>
-                        </div>
+
+                </div>
+                <div class="row">
+                    <!--Grid column-->
+                    <div class="col-md-12 mb-4">
+                        <h2 class="mb-3 text-uppercase font-weight-bold about-us-title-color">SCHOLARSHIP<br>
+                            PROGRAMME</h2>
+                        <p class="text-justify about-us-color">There is a scholarship board set up for those with a
+                            hunger to learn but sincerely have no means, funded by well meaning individuals across the
+                            globe.
+                            <br>Selection is strictly based on merit and is done by sponsors </p>
                     </div>
-                    <div class="col-lg-4 col-md-4 mb-4">
-                        <div class="container border-right border-left">
-                            <h2 class="text-center white-text py-2 my-0 font-weight-bold h1">99%</h2>
-                            <h4 class="text-center white-text py-2 my-0">ACADEMIC PASS RATE</h4>
-                        </div>
+
+
+                </div>
+                <div class="row">
+                    <!--Grid column-->
+                    <div class="col-md-12 mb-4">
+                        <h2 class="mb-3 text-uppercase font-weight-bold about-us-title-color">OUR CORE<br>
+                            VALUES</h2>
+                        <p class="text-justify about-us-color">There is a scholarship board set up for those with a
+                            hunger to learn but sincerely have no means, funded by well meaning individuals across the
+                            globe.
+                            <br>Selection is strictly based on merit and is done by sponsors </p>
+                        <ul>
+                            <li>Child Centredness
+                            </li>
+                            <li>Interpersonal Relationships
+                            </li>
+                            <li>Creativity
+                            </li>
+                            <li>Respect
+                            </li>
+                            <li>Integrity
+                            </li>
+                            <li>Excellence
+                            </li>
+                            <li>Entrepreneurship
+                            </li>
+                            <li>Service
+                            </li>
+                            <li>Sustainability</li>
+                        </ul>
                     </div>
-                    <div class="col-lg-4 col-md-4 mb-4">
-                        <div class="container">
-                            <h2 class="text-center white-text py-2 my-0 font-weight-bold h1">100%</h2>
-                            <h4 class="text-center white-text py-2 my-0">SATISFIED PARENTS</h4>
-                        </div>
-                    </div>
+
+
                 </div>
             </section>
-        </div>
-        <div>
-            <!--Section: Best Features-->
-            <section id="best-features" class='text-center mt-5 mb-5 pb-5 pt-5'>
-                <!--Heading-->
-                <h2 class="md-5 font-weight-bold text-center text-uppercase text-info pb-5">TESTIMONIALS</h2>
-                <!--Grid row-->
-                <div class="row d-flex justify-content-center mb-4">
-                    <!--Grid Column-->
-                    <div class="col-md-8">
-                        <!--Description-->
-                        <p>De Atlas Model Schools is one of the best schools that we parents can
-                            guarantee any wise parent because they have qualified diligent and
-                            dependable teachers and their students are very sound with well
-                            secured and decent environment for effective learning. I have been
-                            enjoying the school.
-                        </p>
-                        <h4 class="font-weight-bold text-info">Mrs. Kareem (Parent)</h4>
-                    </div>
-                </div>
-                <!--Grid row-->
-
-            </section>
-            <!--Section: Best Features-->
         </div>
 
     </main>
