School About Page

--- a/about.html
+++ b/about.html
@@ -39,14 +39,14 @@
 
             <!-- Navbar brand -->
             <div class="row">
-                <div class="col-md-6"><a class="navbar-brand" href="#">
+                <div class="col-md-6  pl-0 pr-0"><a class="navbar-brand" href="#">
                         <img src="./img/De Atlas Images/School Logo.png" height="70" class="d-inline-block align-top"
                             alt="mdb logo">
 
                     </a>
                 </div>
                 <div class="col-md-6">
-                    <p class="info-text text-uppercase">De Atlas Model School</p>
+                    <p class="text-uppercase  blue-text mb-0 pt2 ">De Atlas Model School</p>
                 </div>
             </div>
 
