School About Page

--- a/about.html
+++ b/about.html
@@ -188,7 +188,7 @@
                             hunger to learn but sincerely have no means, funded by well meaning individuals across the
                             globe.
                             <br>Selection is strictly based on merit and is done by sponsors </p>
-                        <ul>
+                        <ul class="style-unordered-list">
                             <li>Child Centredness
                             </li>
                             <li>Interpersonal Relationships
