School About Page

--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
     <main class="mt-5">
         <div class="container">
 
-            <!--Section: Gallery-->
+            <!--Section-->
             <section id="gallery text-center">
 
 
@@ -231,13 +231,9 @@
                         <div class="col-6"><img src="./img/De Atlas Images/DE ATLAS WEBSITE LOGO.png" alt=""
                                 class="img-fluid"></div>
                         <div class="col-6 pt-5">
-                            <!-- <h6 class="text-uppercase font-weight-bold">
-                                <strong>DE ATLAS MODEL SCHOOLS</strong>
-                            </h6> -->
+
                         </div>
                     </div>
-
-                    <!-- <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;"> -->
                     <p class="text-justify">De Atlas Model School offers
                         first-class education from the
                         foundation stage to
@@ -285,9 +281,6 @@
                 </div>
                 <!--/.Third column-->
 
-                <!--Fourth column-->
-
-                <!--/.Fourth column-->
 
             </div>
         </div>
