School Home Page

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
     <main class="mt-5">
         <div class="container">
 
-            <!--Section: Gallery-->
-            <section id="gallery text-center">
+            <!--Section: About Us-->
+            <section class="text-center">
 
                 <!-- Heading -->
                 <h2 class="mb-5 mt-10 font-weight-bold text-center about-us-color">About Us</h2>
@@ -104,8 +104,8 @@
                 <div class="row">
                     <!--Grid column-->
                     <div class="col-md-6 mb-4">
-                        <h4 class="mb-3 text-uppercase text-info"><strong>Who we are</strong></h4>
-                        <p>We are goal-oriented and strive for continuous improvement in teaching and learning. We value
+                        <h4 class="mb-3 text-uppercase text-info "><strong>Who we are</strong></h4>
+                        <p class="text-justify">We are goal-oriented and strive for continuous improvement in teaching and learning. We value
                             not only academic success, but we also encourage talents of all kinds whether in the arts,
                             drama, music or sports. Our view is that a kind, respectful and helpful pupil, who has a
                             positive attitude to school life and fellow pupils, is every bit as worthwhile as the
@@ -142,7 +142,7 @@
                     <!--Grid column-->
                     <div class="col-md-6 mb-5 mt-5 pt-4">
                         <h4 class="mb-3 text-uppercase text-info"><strong>Our Students</strong></h4>
-                        <p>Our students are trained with the aim of developing a high level of self-esteem and
+                        <p class="text-justify">Our students are trained with the aim of developing a high level of self-esteem and
                             self-confidence wherever they might find themselves in the future.They are engaged and taugh
                             using accredited nigeria curicullum for primary schools and taught by experienced staff you
                             can have to ensure quality delivery of knowledge to our wards. we also have programs to
@@ -160,9 +160,9 @@
                 <!--Grid row-->
 
             </section>
-            <!--Section: Gallery-->
-            <!--Section: Best Features-->
-            <section id="best-features" class="mb-5">
+          
+            <!--Section: Our School-->
+            <section class="mb-5">
                 <p class=" text-center text-info text-uppercase">Our School</p>
                 <h1 class="mb-3 font-weight-bold text-center text-uppercase pink-text">Programs</h1>
                 <!--Grid row-->
@@ -230,10 +230,10 @@
                 <!--Grid row-->
 
             </section>
-            <!--Section: Best Features-->
+            <!--Section: Our School-->
         </div>
         <div class="container-fluid pink pt-5 pb-5">
-            <section id="why" class='text-center pb-5'>
+            <section class='text-center pb-5'>
                 <h2 class="mb-3 pt-5 pb-5 font-weight-bold text-center white-text">WHY DE ATLAS MODEL SCHOOL</h2>
                 <div class="row ml-5 mr-5">
                     <div class="col-lg-4 col-md-4 mb-4">
@@ -258,7 +258,7 @@
             </section>
         </div>
         <div>
-            <!--Section: Best Features-->
+            <!--Section: Testimonials-->
             <section id="best-features" class='text-center mt-5 mb-5 pb-5 pt-5'>
                 <!--Heading-->
                 <h2 class="md-5 font-weight-bold text-center text-uppercase text-info pb-5">TESTIMONIALS</h2>
